# codemeber

./: .tool-versions  README.md  pyproject.toml
2023/CHALLENGE_01/:  CHALLENGE_01.md
2023/CHALLENGE_01/python/: main.py
2023/CHALLENGE_01/src/: main.py
third_parties/python/: BUILD.bazel  requirements.in  requirements_lock.txt
