[tool.poetry]
name = "codember"
version = "0.0.0"
description = ""
authors = ["Daniel Albarral Nunez <daniel@albarralnunez.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pip-tools = "^7.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
